<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="THÔNG TIN SINH VIÊN"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/ho_va_ten"
            android:gravity="center_vertical" />

        <EditText
            android:id="@+id/hoten"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:hint="@string/nhap_ho_va_ten"
            android:inputType="text"
            android:autofillHints="name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/mssv"
            android:gravity="center_vertical" />

        <EditText
            android:id="@+id/mssv"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:hint="@string/nhap_mssv"
            android:inputType="text"
            android:autofillHints="username" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/lop"
            android:gravity="center_vertical" />

        <EditText
            android:id="@+id/lop"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:hint="@string/nhap_lop"
            android:inputType="text"
            android:autofillHints="class" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/sdt"
            android:gravity="center_vertical" />

        <EditText
            android:id="@+id/sdt"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:hint="@string/nhap_sdt"
            android:inputType="phone"
            android:autofillHints="phone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00783838"
            android:gravity="center"
            android:text="SINH VIÊN NĂM"
            android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/namhoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/nam1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Năm 1" />

            <RadioButton
                android:id="@+id/nam2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Năm 2" />

            <RadioButton
                android:id="@+id/nam3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Năm 3" />

            <RadioButton
                android:id="@+id/nam4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Năm 4" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:gravity="center"
            android:text="CHUYÊN NGÀNH"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/htn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Máy tính HTN" />

            <CheckBox
                android:id="@+id/dt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Điện tử" />

            <CheckBox
                android:id="@+id/vt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Viễn thông" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:backgroundTint="#009CB8F6"
        android:gravity="center"
        android:text="KẾ HOẠCH PHÁT TRIỂN BẢN THÂN"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/khptbt"
        android:layout_width="match_parent"
        android:layout_height="114dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Nhập kế hoạch phát triển bản thân"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="GỬI THÔNG TIN" />

</LinearLayout>
